--- a/aber/proffesional_issues/Moderncv Classic/main.tex
+++ b/aber/proffesional_issues/Moderncv Classic/main.tex
@@ -50,18 +50,21 @@
 % recipient data
 \recipient{Company Recruitment team}{Company, Inc.\\123 somestreet\\London}
 \date{\today}
-\opening{Dear Sir or Madam,}
+\opening{Dear Mr. Parry,}
 \closing{Yours faithfully,}
 \enclosure[Attached]{curriculum vit\ae{}}          % use an optional argument to use a string other than "Enclosure", or redefine \enclname
 \makelettertitle
 
 I am responding to the advertisement for a graduate Java developer position in your start-up company. Please find attached a copy of my resume for your consideration.
 
-I am a final year student at Aberystwyth University who has a wide range of skills you are looking for in your advertised position. My degree has furnished me with a wide variety of technical knowledge, a high level of self-motivation, and the initiative to adapt to new and unfamiliar environments. 
+I am a final year student at Aberystwyth University who has a wide range of skills you are looking for in your advertised position. My degree has furnished me with a wide variety of technical knowledge, a high level of self-motivation, and the initiative to adapt to new and unfamiliar environments through the numerous and diverse modules I have completed. 
 
-My year in industry has given me the teamwork and communication skills that are essential in the modern software development industry though close customer contact and working in a tight nit yet diverse development team.
+My year in industry has given me the teamwork and communication skills that are essential in the modern software development industry through close customer contact and through working in a closely integrated yet diverse international development team. During my time in industry I was involved in all areas of development life cycle from requirements and architectural design through to implementation, testing and maintenance.
 
 I have a wealth of experience in Java and object orientated programming gained from my degree and my work experience respectively. During my degree I have developed numerous applications, including web based Java applications and RESTful client software. I am more than proficient in my knowledge of MySQL databases and I have a good working knowledge of Linux environments and Apache web servers.
+
+I am a quick learner and keen problem solver. I spent my placement year writing data analysis software for particle accelerator instruments which involved a steep and technical learning curve. My final year dissertation project is a research project analysing mammograms, which is a challenging subject requiring me to draw on the many different skills I have at my disposal.
+
 
 I thank you for your time in considering my application and I hope to hear from you soon.
 
