--- a/aber/proffesional_issues/slj11_curriculum_vitae.tex
+++ b/aber/proffesional_issues/slj11_curriculum_vitae.tex
@@ -65,7 +65,7 @@ Key Modules:
 \item Program Design, Data Structures and Algorithms (88\%)
 \item Modelling Persistent Data (96\%)
 \item Web Development Tools (94\%)
-\item Developing Internet Based Applications (Result Pending)
+\item Developing Internet-Based Applications (80\%)
 \end{list2}
 
 {\bf New College}\\
