--- a/personal/personal_statement/personal_statement.tex
+++ b/personal/personal_statement/personal_statement.tex
@@ -79,7 +79,9 @@ My enthusiasm for computer science comes from two factors: my natural curiosity 
 
 I'm drawn to apply to postgraduate positions in the medical domain for a number of factors. Firstly, the area has a clear and meaningful application towards help people which makes it personally satisfying and a worthwhile endeavour. Secondly, I enjoy the idea of working in a areas on the borders of disciplines. During my undergraduate I took an industrial year out at ISIS Neutron Source where I worked in close collaboration with computer scientists and physicists on neutron scattering analysis software. I found that one of the most rewarding parts of the job was working alongside people from a completely different scientific discipline. Thirdly, I believe that the problems posed in medical analysis offer some of the most challenging problems and is an exciting an active research area in which my academic ambitions can be realised.
 
-Currently, I am working through the fourth year of my degree and undertaking a dissertation project looking into the application of dimensionality reduction techniques to the feature space of both real and synthetically generated mammograms. The end goals of the project are to try and understand the similarity the two datasets under projection, particularly in regards to risk classification.
+Currently, I am working through the fourth year of my degree and undertaking a dissertation project looking into the application of dimensionality reduction techniques to the feature space of both real and synthetically generated mammograms. The end goals of the project are to try and understand the similarity the two datasets under projection, particularly in regards to risk classification. I have thoroughly enjoyed every second of this project so far and am eager to find a way to develop this interest into a potential career path.
+
+The advertised position at Wolfson Institute at the Queen Mary University of London caught my eye because of their renowned medical department.
 
 My undergraduate and placement year has given me excellent programming abilities and problem solving skills suitable to a role
 
