--- a/aber/intelligent_systems/assignment1/report/references.bib
+++ b/aber/intelligent_systems/assignment1/report/references.bib
@@ -1,175 +1,10 @@
-@book{murphy2012machine,
-  title={Machine learning: a probabilistic perspective},
-  author={Murphy, Kevin P},
-  year={2012},
-  publisher={MIT press}
-}
-
-@article{russell1995artificial,
-  title={Artificial intelligence: a modern approach},
-  author={Russell, Stuart and Norvig, Peter},
-  year={1995}
-}
-
-@incollection{lecun2012efficient,
-  title={Efficient backprop},
-  author={LeCun, Yann A and Bottou, L{\'e}on and Orr, Genevieve B and M{\"u}ller, Klaus-Robert},
-  booktitle={Neural networks: Tricks of the trade},
-  pages={9--48},
-  year={2012},
-  publisher={Springer}
-}
-
-@inproceedings{glorot2011deep,
-  title={Deep sparse rectifier neural networks},
-  author={Glorot, Xavier and Bordes, Antoine and Bengio, Yoshua},
-  booktitle={International Conference on Artificial Intelligence and Statistics},
-  pages={315--323},
-  year={2011}
-}
-
-@misc{nnanddeeplearning,
-  title = {{Neural Networks and Deep Learning}},
-  howpublished = {\url{http://neuralnetworksanddeeplearning.com/chap2.html}},
-  note = {Accessed: 2015-10-10}
-}
-
-@inproceedings{denil2013predicting,
-  title={Predicting parameters in deep learning},
-  author={Denil, Misha and Shakibi, Babak and Dinh, Laurent and de Freitas, Nando and others},
-  booktitle={Advances in Neural Information Processing Systems},
-  pages={2148--2156},
-  year={2013}
-}
-
-@inproceedings{krizhevsky2012imagenet,
-  title={Imagenet classification with deep convolutional neural networks},
-  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
-  booktitle={Advances in neural information processing systems},
-  pages={1097--1105},
-  year={2012}
-}
-
-@misc{multilayernetwork,
-  title = {{Multi-Layer Neural Network}},
-  howpublished = {\url{https://commons.wikimedia.org/wiki/File:MultiLayerNeuralNetworkBigger_english.png}},
-  note = {Accessed: 2015-10-10}
-}
-
-@article{han2015learning,
-  title={Learning both weights and connections for efficient neural networks},
-  author={Han, Song and Pool, Jeff and Tran, John and Dally, William J},
-  journal={arXiv preprint arXiv:1506.02626},
-  year={2015}
-}
-
-@article{chen2015compressing,
-  title={Compressing Neural Networks with the Hashing Trick},
-  author={Chen, Wenlin and Wilson, James T and Tyree, Stephen and Weinberger, Kilian Q and Chen, Yixin},
-  journal={arXiv preprint arXiv:1504.04788},
-  year={2015}
-}
-
-@inproceedings{lecun1989optimal,
-  title={Optimal brain damage.},
-  author={LeCun, Yann and Denker, John S and Solla, Sara A and Howard, Richard E and Jackel, Lawrence D},
-  booktitle={NIPs},
-  volume={89},
-  year={1989}
-}
-
-@article{zeiler2013stochastic,
-  title={Stochastic pooling for regularization of deep convolutional neural networks},
-  author={Zeiler, Matthew D and Fergus, Rob},
-  journal={arXiv preprint arXiv:1301.3557},
-  year={2013}
-}
-
-@article{nowlan1992simplifying,
-  title={Simplifying Neural Networks by Soft Weight-Sharing},
-  author={Nowlan, Steven J and Hinton, Geoffrey E},
-  journal={Neural Computation},
-  volume={4},
-  number={4},
-  pages={473--493},
-  year={1992},
-  publisher={MIT Press}
-}
-
-@article{cirecsan2011high,
-  title={High-performance neural networks for visual object classification},
-  author={Cire{\c{s}}an, Dan C and Meier, Ueli and Masci, Jonathan and Gambardella, Luca M and Schmidhuber, J{\"u}rgen},
-  journal={arXiv preprint arXiv:1102.0183},
-  year={2011}
-}
-
-@misc{krizhevsky2009learning,
-  title={Learning multiple layers of features from tiny images},
-  author={Krizhevsky, Alex and Hinton, Geoffrey},
-  year={2009},
-  publisher={Citeseer}
-}
-
-@article{lecun1998gradient,
-  title={Gradient-based learning applied to document recognition},
-  author={LeCun, Yann and Bottou, L{\'e}on and Bengio, Yoshua and Haffner, Patrick},
-  journal={Proceedings of the IEEE},
-  volume={86},
-  number={11},
-  pages={2278--2324},
-  year={1998},
-  publisher={IEEE}
-}
-
-@inproceedings{larochelle2007empirical,
-  title={An empirical evaluation of deep architectures on problems with many factors of variation},
-  author={Larochelle, Hugo and Erhan, Dumitru and Courville, Aaron and Bergstra, James and Bengio, Yoshua},
-  booktitle={Proceedings of the 24th international conference on Machine learning},
-  pages={473--480},
-  year={2007},
-  organization={ACM}
-}
-
-@article{hinton2015distilling,
-  title={Distilling the knowledge in a neural network},
-  author={Hinton, Geoffrey and Vinyals, Oriol and Dean, Jeff},
-  journal={arXiv preprint arXiv:1503.02531},
-  year={2015}
-}
-
-@article{srivastava2014dropout,
-  title={Dropout: A simple way to prevent neural networks from overfitting},
-  author={Srivastava, Nitish and Hinton, Geoffrey and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
-  journal={The Journal of Machine Learning Research},
-  volume={15},
-  number={1},
-  pages={1929--1958},
-  year={2014},
-  publisher={JMLR. org}
-}
-
-@inproceedings{deng2009imagenet,
-  title={Imagenet: A large-scale hierarchical image database},
-  author={Deng, Jia and Dong, Wei and Socher, Richard and Li, Li-Jia and Li, Kai and Fei-Fei, Li},
-  booktitle={Computer Vision and Pattern Recognition, 2009. CVPR 2009. IEEE Conference on},
-  pages={248--255},
-  year={2009},
-  organization={IEEE}
-}
-
-@inproceedings{jia2014caffe,
-  title={Caffe: Convolutional architecture for fast feature embedding},
-  author={Jia, Yangqing and Shelhamer, Evan and Donahue, Jeff and Karayev, Sergey and Long, Jonathan and Girshick, Ross and Guadarrama, Sergio and Darrell, Trevor},
-  booktitle={Proceedings of the ACM International Conference on Multimedia},
-  pages={675--678},
-  year={2014},
-  organization={ACM}
-}
-
-@article{welling2013kernel,
-  title={Kernel ridge Regression},
-  author={Welling, Max},
-  journal={Max Welling’s Classnotes in Machine Learning (http://www. ics. uci. edu/welling/classnotes/classnotes. html)},
-  pages={1--3},
-  year={2013}
+@article{riddick2011predicting,
+  title={Predicting in vitro drug sensitivity using Random Forests},
+  author={Riddick, Gregory and Song, Hua and Ahn, Susie and Walling, Jennifer and Borges-Rivera, Diego and Zhang, Wei and Fine, Howard A},
+  journal={Bioinformatics},
+  volume={27},
+  number={2},
+  pages={220--224},
+  year={2011},
+  publisher={Oxford Univ Press}
 }
