--- a/aber/intelligent_systems/assignment1/report/references.bib
+++ b/aber/intelligent_systems/assignment1/report/references.bib
@@ -8,3 +8,92 @@
   year={2011},
   publisher={Oxford Univ Press}
 }
+
+@misc{FDA-IC50,
+  title = {{FDA Website - IC50 versus EC50}},
+  howpublished = {\url{http://www.fda.gov/ohrms/dockets/ac/00/slides/3621s1d/sld036.htm}},
+  note = {Accessed: 2016-03-05}
+}
+
+@article{bellman1957dynamic,
+  title={Dynamic programming and the variation of Green's functions.},
+  author={Bellman, Richard Ernest and Osborn, Howard A},
+  year={1957},
+  publisher={RAND Corporation}
+}
+
+@article{hughes1968mean,
+  title={On the mean accuracy of statistical pattern recognizers},
+  author={Hughes, Gordon P},
+  journal={Information Theory, IEEE Transactions on},
+  volume={14},
+  number={1},
+  pages={55--63},
+  year={1968},
+  publisher={IEEE}
+}
+
+@article{abdi2007bonferonni,
+  title={The Bonferonni and {\v{S}}id{\'a}k corrections for multiple comparisons},
+  author={Abdi, Herv{\'e}},
+  journal={Encyclopedia of measurement and statistics},
+  volume={3},
+  pages={103--107},
+  year={2007},
+  publisher={Sage, Thousand Oaks, Cailf, USA}
+}
+
+@article{hernandez2015bayesian,
+  title={Bayesian Additive Regression Trees using Bayesian Model Averaging},
+  author={Hern{\'a}ndez, Belinda and Raftery, Adrian E and Pennington, Stephen R and Parnell, Andrew C},
+  journal={arXiv preprint arXiv:1507.00181},
+  year={2015}
+}
+
+@article{chipman2010bart,
+  title={BART: Bayesian additive regression trees},
+  author={Chipman, Hugh A and George, Edward I and McCulloch, Robert E},
+  journal={The Annals of Applied Statistics},
+  pages={266--298},
+  year={2010},
+  publisher={Institute of Mathematical Statistics}
+}
+
+@article{chipman1998bayesian,
+  title={Bayesian CART model search},
+  author={Chipman, Hugh A and George, Edward I and McCulloch, Robert E},
+  journal={Journal of the American Statistical Association},
+  volume={93},
+  number={443},
+  pages={935--948},
+  year={1998},
+  publisher={Taylor \& Francis Group}
+}
+
+@article{wager2014confidence,
+  title={Confidence intervals for random forests: The jackknife and the infinitesimal jackknife},
+  author={Wager, Stefan and Hastie, Trevor and Efron, Bradley},
+  journal={The Journal of Machine Learning Research},
+  volume={15},
+  number={1},
+  pages={1625--1651},
+  year={2014},
+  publisher={JMLR. org}
+}
+
+
+@misc{chipmanPresentation,
+  author = {Hugh Chipman and Edward George and Robert McCulloch},
+  title = {{Bayesian Additive Regression Trees (BART)}},
+  howpublished = {\url{http://spectral.kutabiri.com/static/bart_presentation.pdf}},
+  note = {Accessed: 2016-03-06}
+}
+
+@article{friedman2001greedy,
+  title={Greedy function approximation: a gradient boosting machine},
+  author={Friedman, Jerome H},
+  journal={Annals of statistics},
+  pages={1189--1232},
+  year={2001},
+  publisher={JSTOR}
+}
